src/objects/School_Class__c.object
<CustomObject>
    <fields>
        <fullName>Class_Title__c</fullName>
        <label>Class Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits_Attempted__c</fullName>
        <label>Credits Attempted</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credits_Completed__c</fullName>
        <formula>if(ispickval(Result__c,&quot;Passed&quot;),Credits_Attempted__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credits Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Education</label>
        <referenceTo>Education__c</referenceTo>
        <relationshipLabel>School Classes</relationshipLabel>
        <relationshipName>School_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Credit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Semester_Date__c</fullName>
        <formula>Semester__r.Semester_Date__c</formula>
        <label>Semester Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <referenceTo>Semester__c</referenceTo>
        <relationshipLabel>School Classes</relationshipLabel>
        <relationshipName>School_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <formula>right(text(Semester__r.Year__c),2) 
+lpad(text(month(Semester__r.Semester_Date_RPT__c)),2,&quot;0&quot;)
+if(text(Result__c)=&quot;Passed&quot;,&quot;P&quot;,&quot;F&quot;) 
+text(Credits_Completed__c)
+left(Class_Title__c,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications and Speech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Justice and Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music, Theater and Visual Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>School Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>School Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>